--- a/src/slider.css
+++ b/src/slider.css
@@ -12,6 +12,8 @@ a.slide-button{
     opacity: 0.5;
     font-weight: bold; 
     z-index: 2;
+    cursor: pointer;
+    user-select: none; 
 }
 
 a.slide-button-left{
@@ -66,4 +68,29 @@ a.slide-button-right{
 @keyframes move-right-show {
     from {left: -100%; z-index: 2;}
     to {left: 0; z-index: 1;}
+}
+
+.paly-pause-button  {
+    border: 0;
+    position: absolute;
+    top: calc(50% - 25px);
+    left: calc(50% - 25px);
+    z-index: 3;
+    background: transparent;
+    box-sizing: border-box;
+    width: 50px;
+    opacity: 0.7;
+    height: 50px;
+    border-color: transparent transparent transparent #202020;
+    transition: 100ms all ease;
+    cursor: pointer;
+    border-style: solid;
+    border-width: 25px 0 25px 50px;
+}
+.paly-pause-button.paused {
+    border-style: double;
+    border-width: 0 0 0 50px;
+}
+.paly-pause-button :hover {
+    border-color: transparent transparent transparent #404040;
 }
